package edu.fiuba.algo3.modelo.Construible;

public class Tierra extends Construible{
}
