package edu.fiuba.algo3.modelo.Parcela.Pasarela;

import edu.fiuba.algo3.modelo.Enemigo.Enemigo;
import edu.fiuba.algo3.modelo.Posicion;

public class Meta extends Pasarela {

    public Meta(Posicion unaPosicion) {
        super(unaPosicion);
    }

    @Override
    public void insertarEnemigo(Enemigo unEnemigo) throws Exception {
        
    }
}
